components/_common_/Container/Container.css
.Container {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 250px;
  width: 100vw;
}

.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: 1.5rem auto;
  width: 85%;
  max-width: 1400px;
}

.fullViewportHeight {
  height: 100vh;
}

/* Dark Themes */
.secondary {
  background-color: var(--secondary);
  color: var(--white);
  fill: var(--white);
}

/* Light Themes */
.gray {
  background-color: var(--gray);
  color: var(--secondary);
  fill: var(--secondary);
}

.white {
  background-color: var(--white);
  color: var(--secondary);
  fill: var(--secondary);
}

